tests/miniJava/neg/004916_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , new int [] java ) { return 0 ; } }
